Adding content to homepage of

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      body {
+        background-color: grey;
+      }
+    </style>
     <title>Leptos Tutorial</title>
     <!-- <link href="css/style.css" rel="stylesheet"> -->
+    <!-- See Trunk Docs, but Linking asset types requires ... -->
+    <!-- <link data-trunk rel="scss" href="css/style.css" rel="stylesheet"> -->
   </head>
   <body></body>
 </html>
