Toggle password show field enabled

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,15 @@
       body {
         background-color: grey;
       }
+      .toggle-password {
+        cursor: pointer;
+      }
+      .toggle-password:before {
+        content: "\1F611";
+      }
+      .toggle-password.show:before {
+        content: "\1FAE3";
+      }
     </style>
     <title>Leptos Tutorial</title>
     <!-- <link href="css/style.css" rel="stylesheet"> -->
