--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
         padding: 0;
       }
     </style>
-    <title>Leptos Tutorial</title>
+    <title>Kevs Quiz App</title>
     <link data-trunk href="public/css/style.css" rel="css" />
     <!-- See Trunk Docs, but Linking asset types requires ... -->
     <!-- [Trunk Docs](https://trunkrs.dev/assets/#css) -->
